# slm-efficiency-frontier

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: budget.yaml  kaggle.yaml  model_pool.yaml  tasks.yaml
data/sample/: README.md  examples.jsonl
docs/: benchmark_design.md  budget_policy.md  hugging_face_release.md  kaggle_execution.md  model_pool.md  qa_protocol.md  research_protocol.md  security.md
notebooks/: 00_kaggle_environment_check.ipynb  01_kaggle_research_sweep.ipynb  02_kaggle_openrouter_price_check.ipynb  03_kaggle_dry_run_evaluation.ipynb  04_kaggle_public_eval_run.ipynb  05_kaggle_final_qa.ipynb
scripts/: README.md  build_leaderboard.py  check_english_only.py  package_hf_dataset.py  package_hf_space.py  run_kaggle_eval.py
src/slm_efficiency_frontier/: __init__.py  budget.py  config.py  datasets.py  evaluator.py  json_utils.py  metrics.py  openrouter.py  schemas.py
src/slm_efficiency_frontier/pytorch_baselines/: __init__.py  cross_encoder.py  reranker.py  tiny_classifier.py
src/slm_efficiency_frontier/validators/: __init__.py  clause_conflict.py  exact_match.py  json_validity.py  table_reasoning.py  tool_calling.py
tests/: README.md  test_budget_guard.py  test_english_only.py  test_json_utils.py  test_leaderboard.py  test_metrics.py  test_schema.py  test_validators.py
