[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-efficiency-frontier"
version = "0.1.0"
description = "PyTorch-first benchmark for SLM cost-per-correct-answer on verifiable agentic tasks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
space = ["gradio>=4.0", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
